# hackathon-starline

./: .gitignore  README.md
kobuki/docker/: Dockerfile  build.bash  into.bash  run.bash
kobuki/scripts/: kobuki_setup.bash
kobuki/workspace/: calibration_matrix.npy  distortion_coefficients.npy
kobuki/workspace/bridges/: 19_bridge.yaml
kobuki/workspace/src/449_ADventure/: .setup.py.swp  package.xml  setup.cfg  setup.py
kobuki/workspace/src/449_ADventure/449_ADventure/: hac.py  hac_hero.py  hac_victim.py  hero_to_home.py  velocity_sub.py
kobuki/workspace/src/449_ADventure/config/: nav_params.yaml
kobuki/workspace/src/449_ADventure/launch/: nav_start.launch.py  start.launch.py
kobuki/workspace/src/449_ADventure/src/: velocity_sub.py
kobuki/workspace/src/aruco_controller/: package.xml  setup.py
kobuki/workspace/src/aruco_controller/aruco_controller/: aruco_control.py
kobuki/workspace/src/kobuki_ros/kobuki_keyop/: package.xml
kobuki/workspace/src/maze_solver/: package.xml  setup.cfg  setup.py
kobuki/workspace/src/maze_solver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
kobuki/workspace/src/maze_solver/log/: latest_build
kobuki/workspace/src/maze_solver/maze_solver/: .planner.py.swo  planner.py
kobuki/workspace/src/pointcloud2laserscan/: CMakeLists.txt
kobuki/workspace/src/pointcloud2laserscan/src/: pointcloud2laserscan.cpp
kobuki/workspace/src/rplidar_ros/launch/: test_rplidar.launch.py
scripts/: connect_to_new_wifi.bash  docker_install.bash
simulation/docker/: Dockerfile  build.bash  run.bash  stop.bash
simulation/workspace/src/pointcloud2laserscan/install/: local_setup.sh  setup.sh
simulation/workspace/src/pointcloud2laserscan/log/: latest_build
simulation/workspace/src/pointcloud2laserscan/src/: pointcloud2laserscan.cpp
simulation/workspace/src/survey/: CMakeLists.txt  package.xml
(+53 files in other folders)
